Did small changes to goat img on show page and fixed aligning of goat cards on the home page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,6 +11,10 @@
   width: 200px;
 }
 
+.nav-link {
+  margin: 0 10px;
+}
+
 .nav-item.dropdown {
   &:hover {
   cursor: pointer;
